Fixed vertical alignment of center frame

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -42,12 +42,15 @@ Header {
   font-size: 40px;
   justify-content: center;
   text-decoration: none;
+  padding-top: 100px;
 }
 .review-frame-container {
   width: 1080px;
   display: flex;
   flex-direction: column;
   margin: 0px auto;
+  padding-top: 100px;
+  align-self: center;
 }
 .review-frame-buttons-container {
   display: flex;
@@ -87,6 +90,7 @@ Header {
   display: flex;
   flex-direction: column;
   margin: 0px auto;
+  padding-top: 100px;
 }
 .review-head,
 .reviewer,
@@ -103,6 +107,7 @@ Header {
   flex-direction: row;
   flex-wrap: wrap;
   margin: 0px auto;
+  padding-top: 100px;
 }
 .cover-list-image {
   height: 350px;
